--- a/package/features/overflow-card/OverflowCard.module.css
+++ b/package/features/overflow-card/OverflowCard.module.css
@@ -1,14 +1,26 @@
 .overflowCard {
 	width: 13rem;
-	background: var(--ec-default-background);
+	background: #fff;
 	padding: 0.5rem 0.5rem 0.625rem 0.5rem;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-	border: 0.0625rem solid var(--ec-gray-3);
+	border: 1px solid #dee2e6;
 	border-radius: 0.5rem;
 	overflow: hidden;
 	position: relative;
 	display: flex;
 	flex-direction: column;
+}
+
+[data-ec-color-scheme='dark'] .overflowCard {
+	background: #3a3a3a;
+	border: 1px solid #424242;
+}
+
+@media (prefers-color-scheme: dark) {
+	[data-ec-color-scheme='auto'] .overflowCard {
+		background: #3a3a3a;
+		border: 1px solid #424242;
+	}
 }
 
 .eventsWrapper {
